--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-    "name"          : "node-red-contrib-json",
-    "version"       : "0.0.2",
-    "description"   : "A collection of Node-RED nodes for processing JSON.",
-    "dependencies"  : {
-        "is-utf8"   : ">=0.2.0",
-        "JSONPath"  : ">=0.10.0",
-        "JSONSelect": ">=0.4.0",
-        "JSONStream": ">=0.10.0"
+    "name"        : "node-red-contrib-json",
+    "version"     : "0.1.0",
+    "description" : "A Node-RED node for processing JSON.",
+    "dependencies": {
+        "is-utf8"    : ">=0.2.0",
+        "JSONPath"   : ">=0.10.0",
+        "JSONSelect" : ">=0.4.0",
+        "JSONStream" : ">=0.10.0",
+        "require-dir": ">=0.1.0"
     },
     "repository" : {
         "type": "git",
         "url" : "https://github.com/jimbojw/node-red-contrib-json"
     },
     "license" : "Apache-v2.0",
-    "keywords": [ "node-red", "jsonpath", "jq", "jsonselect" ],
+    "keywords": [ "node-red", "contrib-json", "json", "jsonpath", "jq", "jsonselect" ],
     "node-red"      : {
         "nodes"     : {
-            "JSONPath"  : "JSONPath.js",
-            "jq"        : "jq.js",
-            "JSONSelect": "JSONSelect.js"
+            "contrib-json": "json.js"
         }
     },
     "author": {
