--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "name"        : "node-red-contrib-json",
-    "version"     : "0.1.0",
+    "version"     : "0.2.0",
     "description" : "A Node-RED node for processing JSON.",
     "dependencies": {
         "is-utf8"    : ">=0.2.0",
+        "json-select": ">=2.2.0",
         "JSONPath"   : ">=0.10.0",
         "JSONSelect" : ">=0.4.0",
         "JSONStream" : ">=0.10.0",
+        "notevil"    : ">=0.8.1",
         "require-dir": ">=0.1.0"
     },
     "repository" : {
